objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_ID__c</fullName>
        <label>Master_ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast</label>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>